fixed the weird spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ color: #fff !important;
 }
 
 .generator {
-  margin: 200px;
+  margin: 200px 0 0 0;
 }
 
 .generator img {
